--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,24 @@
   <title>sarava338</title>
 </head>
 <body>
-  <header><h1>Saravanan Lakshmanan</h1></header>
+  <header>
+    <p>sarava338</p>
+    <nav>
+      <ul>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+      </ul>
+  </nav>
+  </header>
+    <main>
+      <h1>Saravanan Lakshmanan</h1>
+    </main>
+    <article>
+      <section id="experience"><h2>Experience</h2></section>
+      <section id="projects"><h2>Side Projects</h2></section>
+      <section id="skills"><h2>Skills</h2></section>
+    </article>
   <footer>
     <p>@ sarava338</p>
   </footer>
