theme completely setted

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Skills</a></li>
+        <button id="theme-handler">theme</button>
       </ul>
   </nav>
   </header>
@@ -28,6 +29,6 @@
   <footer>
     <p>@ sarava338</p>
   </footer>
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
