--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <style>
+    :root {
+  --theme-color: #21e0e0ec;
+}
+
+body{
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  margin: 3rem 5vw;
+}
+
+header, header ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header li {
+  list-style: none;
+  margin-right: 20px;
+}
+
+header a {
+  color: inherit;
+  text-decoration: none;
+}
+
+main h1 {
+  color: var(--theme-color);
+  text-align: left;
+  font-size: 12vw;
+}
+
+footer {
+  text-align: center;
+}
+  </style>
   <title>sarava338</title>
 </head>
 <body>
@@ -29,6 +66,37 @@
   <footer>
     <p>@ sarava338</p>
   </footer>
-  <script type="module" src="index.js"></script>
+  <script type="module">
+    const themeHandler = document.getElementById('theme-handler')
+    const root = document.documentElement.style
+
+    const DARK_THEME_COLOR = '#333333'
+    const BRIGHT_THEME_COLOR = '#fffff1'
+
+    const setTheme = (theme) => {
+      switch (theme) {
+        case 'bright':
+          localStorage.setItem('theme', theme)
+          root.setProperty('--bg-color', BRIGHT_THEME_COLOR)
+          root.setProperty('--text-color', DARK_THEME_COLOR)
+          return
+      
+        default:
+          localStorage.setItem('theme', 'dark')
+          root.setProperty('--bg-color', DARK_THEME_COLOR)
+          root.setProperty('--text-color', BRIGHT_THEME_COLOR)
+          return
+      }
+    }
+
+    document.body.onload = () => {
+      setTheme(localStorage.getItem('theme'))
+    }
+
+    themeHandler.addEventListener('click', () => {
+      if (localStorage.getItem('theme') === 'dark') setTheme('bright')
+      else setTheme('dark')
+    })
+  </script>
 </body>
 </html>
