--- a/public/index.html
+++ b/public/index.html
@@ -1,102 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    :root {
-  --theme-color: #21e0e0ec;
-}
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-body{
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  margin: 3rem 5vw;
-}
+    <style>
+      :root {
+        --theme-color: #21e0e0ec;
+      }
 
-header, header ul {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: var(--bg-color);
+        color: var(--text-color);
+        margin: 3rem 5vw;
+      }
 
-header li {
-  list-style: none;
-  margin-right: 20px;
-}
+      header,
+      header ul {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
 
-header a {
-  color: inherit;
-  text-decoration: none;
-}
+      header li {
+        list-style: none;
+        margin-right: 20px;
+      }
 
-main h1 {
-  color: var(--theme-color);
-  text-align: left;
-  font-size: 12vw;
-}
+      header a {
+        color: inherit;
+        text-decoration: none;
+      }
 
-footer {
-  text-align: center;
-}
-  </style>
-  <title>sarava338</title>
-</head>
-<body>
-  <header>
-    <p>sarava338</p>
-    <nav>
-      <ul>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <button id="theme-handler">theme</button>
-      </ul>
-  </nav>
-  </header>
+      main h1 {
+        color: var(--theme-color);
+        text-align: left;
+        font-size: 12vw;
+      }
+
+      footer {
+        text-align: center;
+      }
+    </style>
+
+    <title>sarava338</title>
+  </head>
+  <body>
+    <header>
+      <p>sarava338</p>
+      <nav>
+        <ul>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <button id="theme-handler">theme</button>
+        </ul>
+      </nav>
+    </header>
+
     <main>
       <h1>Saravanan Lakshmanan</h1>
     </main>
+
     <article>
       <section id="experience"><h2>Experience</h2></section>
       <section id="projects"><h2>Side Projects</h2></section>
       <section id="skills"><h2>Skills</h2></section>
     </article>
-  <footer>
-    <p>@ sarava338</p>
-  </footer>
-  <script type="module">
-    const themeHandler = document.getElementById('theme-handler')
-    const root = document.documentElement.style
 
-    const DARK_THEME_COLOR = '#333333'
-    const BRIGHT_THEME_COLOR = '#fffff1'
+    <footer>
+      <p>@ sarava338</p>
+    </footer>
 
-    const setTheme = (theme) => {
-      switch (theme) {
-        case 'bright':
-          localStorage.setItem('theme', theme)
-          root.setProperty('--bg-color', BRIGHT_THEME_COLOR)
-          root.setProperty('--text-color', DARK_THEME_COLOR)
-          return
-      
-        default:
-          localStorage.setItem('theme', 'dark')
-          root.setProperty('--bg-color', DARK_THEME_COLOR)
-          root.setProperty('--text-color', BRIGHT_THEME_COLOR)
-          return
+    <script type="module">
+      const themeHandler = document.getElementById('theme-handler')
+      const root = document.documentElement.style
+
+      const DARK_THEME_COLOR = '#333333'
+      const BRIGHT_THEME_COLOR = '#fffff1'
+
+      const setTheme = (theme) => {
+        switch (theme) {
+          case 'bright':
+            localStorage.setItem('theme', theme)
+            root.setProperty('--bg-color', BRIGHT_THEME_COLOR)
+            root.setProperty('--text-color', DARK_THEME_COLOR)
+            return
+
+          default:
+            localStorage.setItem('theme', 'dark')
+            root.setProperty('--bg-color', DARK_THEME_COLOR)
+            root.setProperty('--text-color', BRIGHT_THEME_COLOR)
+            return
+        }
       }
-    }
 
-    document.body.onload = () => {
-      setTheme(localStorage.getItem('theme'))
-    }
+      document.body.onload = () => {
+        setTheme(localStorage.getItem('theme'))
+      }
 
-    themeHandler.addEventListener('click', () => {
-      if (localStorage.getItem('theme') === 'dark') setTheme('bright')
-      else setTheme('dark')
-    })
-  </script>
-</body>
+      themeHandler.addEventListener('click', () => {
+        if (localStorage.getItem('theme') === 'dark') setTheme('bright')
+        else setTheme('dark')
+      })
+    </script>
+  </body>
 </html>
