cards were moved to projects section

--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,18 @@
 
     <article>
       <section id="experience"><h2>Experience</h2></section>
-      <section id="projects"><h2>Side Projects</h2></section>
+      <section id="projects">
+        <h2>Side Projects</h2>
+        <div class="cards">
+          <div class="card">card1</div>
+          <div class="card">card2</div>
+          <div class="card">card3</div>
+          <div class="card">card4</div>
+          <div class="card">card5</div>
+        </div>
+      </section>
       <section id="skills">
         <h2>Skills</h2>
-        <div class="card">card1</div>
-        <div class="card">card2</div>
-        <div class="card">card3</div>
-        <div class="card">card4</div>
-        <div class="card">card5</div>
       </section>
       <section id="contact">
         <h2>Contact</h2>
