--- a/public/index.html
+++ b/public/index.html
@@ -67,29 +67,21 @@
           </li>
         </ul>
 
-        <p style="text-align: center">
-          Or else feel free to submit the below form
-        </p>
-
         <form action="" id="form">
-          <div>
-            <label for="name">Name: </label>
-            <input type="text" id="name" placeholder="Your name" />
-          </div>
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" placeholder="Your name" />
 
-          <div>
-            <label for="mail">Email: </label>
-            <input type="email" id="mail" placeholder="Your email" />
-          </div>
+          <label for="mail">Email</label>
+          <input type="email" id="mail" name="mail" placeholder="Your email" />
 
-          <div>
-            <label for="message">Message: </label>
-            <textarea
-              name="message"
-              id="message"
-              rows="10"
-              placeholder="Recruit me with your heart contents"></textarea>
-          </div>
+          <label for="message">Message</label>
+          <textarea
+            name="message"
+            id="message"
+            rows="10"
+            placeholder="Recruit me with your heart contents"></textarea>
+
+          <button>Submit</button>
         </form>
       </section>
     </article>
