--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,9 @@
       <p>@ sarava338</p>
     </footer>
 
+    <script type="module" src="../src/constants.js"></script>
+    <script type="module" src="../src/utils.js"></script>
+    <script type="module" src="../src/handlers.js"></script>
     <script type="module" src="index.js"></script>
   </body>
 </html>
