css file structure modified

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="stylesheet" href="./styles/tags.css">
+    <link rel="stylesheet" href="./styles/effects.css">
     <link rel="stylesheet" href="style.css" />
     <title>sarava338</title>
   </head>
@@ -90,9 +92,9 @@
       <p>@ sarava338</p>
     </footer>
 
-    <script type="module" src="../src/constants.js"></script>
-    <script type="module" src="../src/utils.js"></script>
-    <script type="module" src="../src/handlers.js"></script>
+    <script type="module" src="./scripts/constants.js"></script>
+    <script type="module" src="./scripts/utils.js"></script>
+    <script type="module" src="./scripts/handlers.js"></script>
     <script type="module" src="index.js"></script>
   </body>
 </html>
