--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
-          <button id="theme-handler">theme</button>
+          <li><button id="theme-handler">theme</button></li>
         </ul>
       </nav>
     </header>
@@ -51,7 +51,7 @@
           </li>
           <li>
             <a target="_blank" href="https://www.linkedin.com/in/sarava338"
-              >linkedin</a
+              >Linkedin</a
             >
           </li>
           <li>
