buymecoffee link added

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,11 @@
               >Youtube</a
             >
           </li>
+          <li>
+            <a href="https://www.buymeacoffee.com/sarava338"
+              >Buy me a Coffe</a
+            >
+          </li>
         </ul>
 
         <form action="" id="form">
