contacts icon were added

--- a/src/index.html
+++ b/src/index.html
@@ -43,36 +43,40 @@
         <h2>Contact</h2>
 
         <ul>
-          <li><a target="_blank" href="https://t.me/sarava338">Telegram</a></li>
+          <li>
+            <a target="_blank" href="https://t.me/sarava338"
+              ><img class="social_media_links" alt="telegram"
+            /></a>
+          </li>
           <li>
             <a target="_blank" href="https://www.instagram.com/sarava338"
-              >Instagram</a
-            >
+              ><img class="social_media_links" alt="instagram"
+            /></a>
           </li>
           <li>
             <a target="_blank" href="https://www.linkedin.com/in/sarava338"
-              >Linkedin</a
-            >
+              ><img class="social_media_links" alt="linkedin"
+            /></a>
           </li>
           <li>
             <a target="_blank" href="https://www.github.com/sarava338"
-              >Github</a
-            >
+              ><img class="social_media_links" alt="github"
+            /></a>
           </li>
           <li>
             <a target="_blank" href="https://www.facebook.com/sarava0338"
-              >Facebook</a
-            >
+              ><img class="social_media_links" alt="facebook"
+            /></a>
           </li>
           <li>
             <a target="_blank" href="https://www.youtube.com/@sarava338"
-              >Youtube</a
-            >
+              ><img class="social_media_links" alt="youtube"
+            /></a>
           </li>
           <li>
-            <a href="https://www.buymeacoffee.com/sarava338"
-              >Buy me a Coffe</a
-            >
+            <a target="_blank" href="https://www.buymeacoffee.com/sarava338"
+              ><img class="social_media_links" alt="buy me a coffee"
+            /></a>
           </li>
         </ul>
 
