theme button set

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,11 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><button id="theme-handler">theme</button></li>
+          <li>
+            <button id="theme-handler">
+              <img alt="theme change button" />
+            </button>
+          </li>
         </ul>
       </nav>
     </header>
