--- a/src/index.html
+++ b/src/index.html
@@ -46,44 +46,6 @@
       <section id="contact">
         <h2>Contact</h2>
 
-        <ul>
-          <li>
-            <a target="_blank" href="https://t.me/sarava338"
-              ><img class="social_media_links" alt="telegram"
-            /></a>
-          </li>
-          <li>
-            <a target="_blank" href="https://www.instagram.com/sarava338"
-              ><img class="social_media_links" alt="instagram"
-            /></a>
-          </li>
-          <li>
-            <a target="_blank" href="https://www.linkedin.com/in/sarava338"
-              ><img class="social_media_links" alt="linkedin"
-            /></a>
-          </li>
-          <li>
-            <a target="_blank" href="https://www.github.com/sarava338"
-              ><img class="social_media_links" alt="github"
-            /></a>
-          </li>
-          <li>
-            <a target="_blank" href="https://www.facebook.com/sarava0338"
-              ><img class="social_media_links" alt="facebook"
-            /></a>
-          </li>
-          <li>
-            <a target="_blank" href="https://www.youtube.com/@sarava338"
-              ><img class="social_media_links" alt="youtube"
-            /></a>
-          </li>
-          <li>
-            <a target="_blank" href="https://www.buymeacoffee.com/sarava338"
-              ><img class="social_media_links" alt="buy me a coffee"
-            /></a>
-          </li>
-        </ul>
-
         <form action="" id="form">
           <label for="name">Name</label>
           <input type="text" id="name" name="name" placeholder="Your name" />
@@ -104,6 +66,56 @@
     </article>
 
     <footer>
+      <h3>Follow me on</h3>
+
+      <ul>
+        <li>
+          <a target="_blank" href="https://t.me/sarava338"
+            ><img class="social_media_links" alt="telegram"
+          /></a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.instagram.com/sarava338"
+            ><img class="social_media_links" alt="instagram"
+          /></a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.linkedin.com/in/sarava338"
+            ><img class="social_media_links" alt="linkedin"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.leetcode.com/sarava338"
+            ><img class="social_media_links" alt="leetcode"
+          /></a>
+        </li>
+        <li>
+          <a href="https://auth.geeksforgeeks.org/user/sarava338"
+            ><img class="social_media_links" alt="geekforgeeks"
+          /></a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.github.com/sarava338"
+            ><img class="social_media_links" alt="github"
+          /></a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.facebook.com/sarava0338"
+            ><img class="social_media_links" alt="facebook"
+          /></a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.youtube.com/@sarava338"
+            ><img class="social_media_links" alt="youtube"
+          /></a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.buymeacoffee.com/sarava338"
+            ><img class="social_media_links" alt="buy me a coffee"
+          /></a>
+        </li>
+      </ul>
+
       <p>@ sarava338</p>
     </footer>
   </body>
