experience section data added

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,16 @@
     </main>
 
     <article>
-      <section id="experience"><h2>Experience</h2></section>
+      <section id="experience">
+        <h2>Experience</h2>
+        <div>
+          <div>
+            <p>Role: <h3>Assistant System Engineer</h3> </p>
+            <p>Company: <small>Tata Consultancy Services</small> </p>
+            <p>Period:  <small>Feb 2022 to current</small> </p>
+          </div>
+        </div>
+      </section>
       <section id="projects">
         <h2>Side Projects</h2>
         <div class="cards">
