experience content changed

--- a/src/index.html
+++ b/src/index.html
@@ -31,23 +31,39 @@
     <article>
       <section id="experience">
         <h2>Experience</h2>
-        <div>
-          <div>
-            <p>Role: <h3>Assistant System Engineer</h3> </p>
-            <p>Company: <small>Tata Consultancy Services</small> </p>
-            <p>Period:  <small>Feb 2022 to current</small> </p>
+        <section class="experiences-cards">
+          <div class="experience-card">
+            <div class="experience-period">
+              <p>current</p>
+            </div>
+
+            <div class="vertical-line">
+              <div class="timeline-ball"></div>
+            </div>
+
+            <div class="experience-info">
+              <p>Assistant System Engineer</p>
+              <p>Tata Consultancy Services</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque
+                optio voluptatum praesentium quia esse at. Adipisci veritatis
+                culpa corrupti reprehenderit alias, ratione autem recusandae
+                dicta facere deleniti, itaque quidem id.
+              </p>
+            </div>
           </div>
-        </div>
+        </section>
       </section>
+
       <section id="projects">
         <h2>Side Projects</h2>
-        <div class="cards">
-          <div class="card">card1</div>
-          <div class="card">card2</div>
-          <div class="card">card3</div>
-          <div class="card">card4</div>
-          <div class="card">card5</div>
-        </div>
+        <section class="project-cards">
+          <div class="project-card">card1</div>
+          <div class="project-card">card2</div>
+          <div class="project-card">card3</div>
+          <div class="project-card">card4</div>
+          <div class="project-card">card5</div>
+        </section>
       </section>
       <section id="skills">
         <h2>Skills</h2>
