not yet completed

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
       </nav>
     </header>
 
+    <h4>Portfolio not completed yet</h4>
+
     <main>
       <h1>Saravanan Lakshmanan</h1>
     </main>
