migrted to vite from webpack

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <main>
       <h1>Saravanan Lakshmanan</h1>
+      <canvas id="threeD_model"></canvas>
     </main>
 
     <article>
@@ -85,7 +86,8 @@
             name="message"
             id="message"
             rows="10"
-            placeholder="Recruit me with your heart contents"></textarea>
+            placeholder="Recruit me with your heart contents"
+          ></textarea>
 
           <button>Submit</button>
         </form>
@@ -99,5 +101,6 @@
 
       <p>@ sarava338</p>
     </footer>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
