--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <title>sarava338</title>
   </head>
   <body>
-    <p>Hi, I am</p>
-    <h1>sarava338</h1>
-    <h2>504</h2>
-    <h2>We are down. Please hang on for few days</h2>
+    <section id="nav"><nav></nav></section>
+    <section id="main">
+      <h1>sarava338</h1>
+    </section>
+    <section id="links"></section>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
