--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
     <title>sarava338</title>
   </head>
   <body>
-    <section id="nav"><nav></nav></section>
-    <section id="main">
-      <h1>sarava338</h1>
-    </section>
-    <section id="links"></section>
+    <article>
+      <section id="header">
+        <div class="details">
+          <h1>Saravanan Lakshmanan</h1>
+          <p>Full-Stack Javascript developer</p>
+          <div class="stacks">
+            
+          </div>
+        </div>
+        <img src="./assets/me.png" alt="sarava338">
+        <section class="social_media"></section>
+      </section>
+      <hr>
+    </article>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
