--- a/index.html
+++ b/index.html
@@ -1,29 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/src/assets/me.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="sarava338 | Saravanan Lakshmanan is my portfolio application"
+      content="Saravanan Lakshmanan | sarava338 portfolio"
     />
-    <title>sarava338</title>
+    <title>Saravanan Lakshmanan | sarav338 portfolio</title>
   </head>
   <body>
-    <article>
-      <section id="header">
-        <div class="details">
-          <h1>Saravanan Lakshmanan</h1>
-          <p>Full-Stack Javascript developer</p>
-          <div class="stacks">
-            
-          </div>
-        </div>
-        <img src="./assets/me.png" alt="sarava338">
-        <section class="social_media"></section>
-      </section>
-      <hr>
-    </article>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
