--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Saravanan Lakshmanan | sarav338 portfolio</title>
   </head>
   <body>
-    <div id="root"></div>
+    <main id="root"></main>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
